modify buzzer driver

--- a/DD_buzzer/Makefile
+++ b/DD_buzzer/Makefile
@@ -9,3 +9,11 @@ default :
 
 clean :
 	make -C $(KERNELDIR) M=$(PWD) clean
+
+del :
+	sudo rmmod buzzer_dev
+	sudo rm -rf /dev/buzzer_dev 
+
+upload :
+	sudo insmod buzzer_dev.ko
+	sudo mknod -m 666 /dev/buzzer_dev c 241 0	
