--- a/final_code/Makefile
+++ b/final_code/Makefile
@@ -1,5 +1,5 @@
-final: dht11temp.o gravity.o led.o main.o
-	gcc -pthread -o final dht11temp.o gravity.o led.o main.o -lwiringPi
+final: dht11temp.o gravity.o led.o sender.o main.o
+	gcc -pthread -o final dht11temp.o gravity.o led.o sender.o main.o -lwiringPi
 
 dht11temp.o: dht11temp.c
 	gcc -c -o dht11temp.o dht11temp.c
@@ -12,6 +12,9 @@ led.o: led.c
 
 main.o: main.c
 	gcc -c -o main.o main.c
+
+sender.o: sender.c
+	gcc -c -o sender.o sender.c
 
 clean :
 	rm -rf *.o
